<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/sky1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:id="@+id/textLocation"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/textDate"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:id="@+id/updated"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/refresh"
                    android:id="@+id/image_btn"/>

            </LinearLayout>


        </LinearLayout>



    </LinearLayout>
\


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        ></View>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        android:text="@string/stat"
        android:id="@+id/statButton"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/temperatureButton"
            android:text="@string/temperaturaButton"
            android:background="@color/babyBlue"
            android:fontFamily="sans-serif-condensed"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/sunButton"
            android:background="@color/babyBlue"
            android:text="@string/izlazakZalazakButton"
            android:fontFamily="sans-serif-condensed"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/windButton"
            android:text="@string/vetarButton"
            android:background="@color/babyBlue"
            android:fontFamily="sans-serif-condensed"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></View>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:id="@+id/showSunset">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/izlazak"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/zalazak"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:weightSum="2"
            android:id="@+id/showWind">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/brzina"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:id="@+id/pravac"
                android:layout_marginLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:id="@+id/showTemperature">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="3"
                >

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/sunceImage"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/sun12"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jedinicaText"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="40dp"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/drop_down"
                    ></Spinner>
            </LinearLayout>

            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1"
               android:weightSum="5"
               android:orientation="vertical">

            <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"></View>

                <TextView
                    android:id="@+id/temperaturaText"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp" />

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="0dp"
                   android:layout_weight="1"
                   android:id="@+id/pritisakText"
                   android:layout_marginLeft="20dp"
                   android:textSize="20dp"
                   android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:id="@+id/vlaznostVazduhaText"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"></View>

           </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>